[package]
name = "falcon-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
itertools = "0.11.0"
hex = "0.4.3"
sha3 = "0.10.8"
