[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmarking suite for falcon-rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon-rust = { path = "../falcon-rust/" }
itertools = "0.12.0"
num = "0.4.1"
pqcrypto-falcon = "0.3.0"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "falcon_rust"
harness = false

[[bench]]
name = "ntru_gen"
harness = false

[[bench]]
name = "babai_reduce"
harness = false
