[package]
name = "benchmark"
version = "0.1.3"
edition = "2021"
description = "Benchmarking suite for falcon-rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falcon-rust = { path = "../falcon-rust", features = ["profiling"] }
itertools = "0.14.0"
num = "0.4.3"
pqcrypto-falcon = "0.4.1"
rand = "0.10.1"
rand_old = { package = "rand", version = "0.8.6" }
fn-dsa = "0.3.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "falcon_rust"
harness = false

[[bench]]
name = "ntru_gen"
harness = false

[[bench]]
name = "babai_reduce"
harness = false

[[bench]]
name = "field"
harness = false

[[bench]]
name = "profile"
harness = false

[features]
profiling = ["falcon-rust/profiling"]
