[package]
name = "falcon-profiler"
version = "0.1.3"
edition = "2021"
description = "Profiling proc-macros for the falcon-rust crate."
license = "MIT"
repository = "https://github.com/aszepieniec/falcon-rust"

[lib]
proc-macro = true

[features]
profiling = []

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
