[package]
name = "falcon-rust"
version = "0.1.2"
edition = "2021"
description = "A rust implementation of the Falcon post-quantum digital signature scheme."
license = "MIT"
repository = "https://github.com/aszepieniec/falcon-rust"
documentation = "https://docs.rs/falcon-rust/latest/falcon_rust/"
homepage = "https://github.com/aszepieniec/falcon-rust"
readme = "../README.md"
keywords = ["falcon", "signature", "post-quantum"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
itertools = "0.12.0"
hex = "0.4.3"
lazy_static = "1.5.0"
num-complex = "0.4.4"
num = "0.4.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
sha3 = "0.10.8"

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"
arbitrary = "1.3.2"
test-strategy = "0.3.1"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
