[package]
name = "falcon-rust"
version = "0.1.3"
edition = "2021"
description = "A rust implementation of the Falcon post-quantum digital signature scheme."
license = "MIT"
repository = "https://github.com/aszepieniec/falcon-rust"
documentation = "https://docs.rs/falcon-rust/latest/falcon_rust/"
homepage = "https://github.com/aszepieniec/falcon-rust"
readme = "../README.md"
keywords = ["falcon", "signature", "post-quantum"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.8.0"
itertools = "0.14.0"
hex = "0.4.3"
lazy_static = "1.5.0"
num-complex = "0.4.6"
num = "0.4.3"
rand = "0.10.1"
rand_distr = "0.6.0"
shake = "0.1.0"
falcon-profiler = { version = "0.1.3", path = "../falcon-profiler" }

[dev-dependencies]
proptest = "1.11.0"
proptest-derive = "0.7.0"
arbitrary = "1.4.2"
test-strategy = "0.4.5"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[features]
# Toggling this feature activates the code inside the macro
profiling = ["falcon-profiler/profiling"]
